# modern-software-dev-assignments

week1/: Tree_of_Thoughts.py  assignment.md  automatic_prompt_engineer.py  chain_of_thought.py  directional_stimulus_prompting.py  k_shot_prompting.py  meta_prompting.py  program_aided_lm.py  prompt_chaining.py  rag.py  react_prompting.py  reflexion.py  self_consistency_prompting.py  zero_shot_prompting.py
week2/: README.md  assignment.md  pyproject.toml  writeup.md
week2/app/: config.py  db.py  exceptions.py  main.py  repositories.py
week2/app/routers/: action_items.py  notes.py
week2/app/schemas/: action_item.py  note.py  response.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: test_extract_llm.py
